# toy_plaid_api

./: Cargo.toml  Makefile  compose.yml  package-lock.json  package.json  transactions.csv
celery/: Cargo.toml
celery/src/: main.rs
config/: default.toml
migrations/: 20231220182652_create_transactions_and_related_tables.sql
scripts/: checkings_transactions.csv  personal_finance_categories.csv  savings_transactions.csv  seed_db.js
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/resources/: mod.rs
server/src/resources/accounts/: models.rs  router.rs  sql.rs
server/src/resources/companies/: mod.rs  models.rs  router.rs  sql.rs
server/src/resources/credentials/: models.rs  sql.rs
server/src/resources/institutions/: mod.rs  models.rs  sql.rs
server/src/resources/items/: mod.rs  models.rs  router.rs  sql.rs  tasks.rs  utils.rs
server/src/resources/personal_finance_categories/: mod.rs  models.rs  sql.rs
server/src/resources/transactions/: mod.rs  models.rs  router.rs  sql.rs
server/src/settings/: mod.rs
server/src/utils/: mod.rs
