[package]
name = "celery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../server" }
celery = "0.5.5"
tokio = { version = "1.0", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
exitfailure = "0.5.1"
