[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "toy_plaid_api"

[dev-dependencies]
axum-test-helper = "0.*"

[dependencies]
axum = { version = "0.7" }
hyper = { version = "1.1.0", features = ["full"] }
http = "1.0.0"
config = { version = "0.13.3" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0.160" }
serde_json = { version = "1.0" }
tokio = { version = "1.0", features = ["full", "tracing"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "request-id"] }
utoipa = { version = "4" }
utoipa-redoc = { version = "2.0.0", features = ["axum"] }
url = "2.2.0"
uuid = { version = "1.3.0", features = ["serde"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
] }
